CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT(VocabTree2)

IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE Release)
ENDIF()

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O3")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native")

FIND_PACKAGE(OpenMP REQUIRED)

SET(THREADS_PREFER_PTHREAD_FLAG ON)
FIND_PACKAGE(Threads REQUIRED)

FIND_PACKAGE(ZLIB REQUIRED)

# Make libraries
SET(ANN_CHAR_DIR "${PROJECT_SOURCE_DIR}/lib/ann_1.1_char/src/")
ADD_SUBDIRECTORY(${ANN_CHAR_DIR})

SET(ANN_DIR "${PROJECT_SOURCE_DIR}/lib/ann_1.1/src/")
ADD_SUBDIRECTORY(${ANN_DIR})

SET(IMAGELIB_DIR "${PROJECT_SOURCE_DIR}/lib/imagelib")
ADD_SUBDIRECTORY(${IMAGELIB_DIR})

# Make programs
SET(VOCABLIB_DIR "${PROJECT_SOURCE_DIR}/VocabLib")
ADD_SUBDIRECTORY(${VOCABLIB_DIR})

SET(VOCABLEARN_DIR "${PROJECT_SOURCE_DIR}/VocabLearn")
ADD_SUBDIRECTORY(${VOCABLEARN_DIR})

SET(VOCABBUILDDB_DIR "${PROJECT_SOURCE_DIR}/VocabBuildDB")
ADD_SUBDIRECTORY(${VOCABBUILDDB_DIR})

SET(VOCABMATCH_DIR "${PROJECT_SOURCE_DIR}/VocabMatch")
ADD_SUBDIRECTORY(${VOCABMATCH_DIR})

SET(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
ADD_SUBDIRECTORY(${SRC_DIR})

